--- a/src/app/text-formatter/text-formatter.component.html
+++ b/src/app/text-formatter/text-formatter.component.html
@@ -13,7 +13,14 @@
   </div>
   <textarea #text class="form-control" aria-label="Text Content" [(ngModel)]="textContent"></textarea>
 </div>
+
 <div class="d-flex flex-row-reverse mt-3 align-right ">
-  <button type="button" class="btn btn-success" (click)="executeText()" [disabled]="error ||  !isCompleted || textContent.length == 0">Excecute</button>
-  <button type="button" class="btn btn-info me-3" (click)="text2Clipboard()" [disabled]="!isCompleted || textContent.length == 0">Copy</button>
+  <button type="button" class="btn btn-success" (click)="executeText()"
+    [disabled]="error ||  !isCompleted || textContent.length == 0">Excecute</button>
+  <button type="button" class="btn btn-info me-3" (click)="clearText()"
+    [disabled]="!isCompleted || textContent.length == 0">Clear</button>
+
+  <div class="alert alert-primary position-absolute start-0 fade p-1" role="alert">
+    <strong>Copied to the Clipboard</strong>
+  </div>
 </div>
