--- a/src/app/database/database.component.html
+++ b/src/app/database/database.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="submit()" id="top">
+<form [formGroup]="form" (ngSubmit)="searchCards()" id="top">
     <div class="form-group row">
         <label class="col-3 col-md-1 col-form-label">Regions</label>
         <div class="col-9 col-md-11 image-checkboxes-container">
@@ -15,7 +15,7 @@
     </div>
     <div class="form-group row">
         <label class="col-3 col-md-1 col-form-label">Sets</label>
-        <div class="col-9 col-md-11 image-checkboxes-container">
+        <div class="col-9 col-md-5 image-checkboxes-container">
             <div class="form-check form-check-inline" formArrayName="sets"
                 *ngFor="let region of setFormArray.controls; let i = index">
                 <input class="form-check-input" type="checkbox" [id]="'set' + setsData[i].id" [formControlName]="i">
@@ -25,6 +25,18 @@
                 </label>
             </div>
         </div>
+        <ng-container *ngIf="!isMobile">
+            <label class="col-md-1 col-form-label">Artist</label>
+            <div class="col-md-5">
+                <ng-select #artistSelector [(ngModel)]="selectedArtists" [ngModelOptions]="{standalone: true}"
+                    [multiple]="true" [maxSelectedItems]="1" [markFirst]="true"
+                    [placeholder]="'Artist like SIXMOREVODKA, Dao Le'">
+                    <ng-option *ngFor="let artist of artist" [value]="artist.name">
+                        {{artist.name}}
+                    </ng-option>
+                </ng-select>
+            </div>
+        </ng-container>
     </div>
     <div class="form-group row">
         <label class="col-3 col-md-1 col-form-label">Card Types</label>
@@ -39,8 +51,10 @@
                     </label>
                 </div>
                 <ng-container *ngFor="let cardTypeChild of cardType.children; let j = index">
-                    <div class="form-check form-check-inline secondary-controls" formArrayName="cardTypes" [ngClass]="{'active': cardTypeFormArray.controls[cardType.index].value }">
-                        <input class="form-check-input" type="checkbox" [id]="'cardType' + cardTypeChild.id" [formControlName]="cardTypeChild.index">
+                    <div class="form-check form-check-inline secondary-controls" formArrayName="cardTypes"
+                        [ngClass]="{'active': cardTypeFormArray.controls[cardType.index].value }">
+                        <input class="form-check-input" type="checkbox" [id]="'cardType' + cardTypeChild.id"
+                            [formControlName]="cardTypeChild.index">
                         <label class="form-check-label" [for]="'cardType' + cardTypeChild.id">
                             <img *ngIf="cardTypeChild.icon" [src]="'./assets/icons/' + cardTypeChild.icon + '.png'">
                             <span *ngIf="cardTypeChild.name">{{cardType.name }}</span>
@@ -92,7 +106,7 @@
         <div class="col-9 col-md-11">
             <div class="input-group mb-3">
                 <button class="btn btn-secondary" type="button" (click)="clearTextSearch()">Clear</button>
-                <input type="text" class="form-control" formControlName="text"
+                <input type="text" class="form-control" formControlName="text" autofocus
                     placeholder="Card Name, Card Text, Keywords or even Card Code">
             </div>
         </div>
@@ -105,6 +119,18 @@
                 <ng-option *ngFor="let keyword of keywords" [value]="keyword.name">
                     <img *ngIf="keyword.icon" [src]="'./assets/icons/keywords/' + keyword.icon + '.png'" width="20px">
                     {{keyword.name}}
+                </ng-option>
+            </ng-select>
+        </div>
+    </div>
+    <div class="form-group row" *ngIf="isMobile">
+        <label class="col-3 col-form-label">Artist</label>
+        <div class="col-9">
+            <ng-select #artistSelector [(ngModel)]="selectedArtists" [ngModelOptions]="{standalone: true}"
+                [multiple]="true" [maxSelectedItems]="1" [markFirst]="true"
+                [placeholder]="'Artist like SIXMOREVODKA, Dao Le'">
+                <ng-option *ngFor="let artist of artist" [value]="artist.name">
+                    {{artist.name}}
                 </ng-option>
             </ng-select>
         </div>
@@ -273,7 +299,6 @@
                 </div>
             </div>
         </ng-template>
-
     </div>
 
     <div class="back-to-top-wrapper">
