--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 .ng-select .ng-select-container {
-    min-height: 38px;
     .ng-value-container {
         .ng-value-icon.left {
             float: right;
@@ -10,6 +9,11 @@
     }
 }
 
+.ng-select:not(.ng-select-single) {
+    .ng-select-container {
+        min-height: 38px;
+    }
+}
 
 img {
     max-width: 100%;
