--- a/src/app/database/database.component.html
+++ b/src/app/database/database.component.html
@@ -147,7 +147,7 @@
 <div class="search-result" *ngIf="isCompleted">
     <div class="mt-3">Found {{searchResults.length}} card(s).</div>
 
-    <div class="btn-group mt-3" role="group" aria-label="Basic radio toggle button group" *ngIf="isCompleted">
+    <div class="btn-group mt-3" role="group" aria-label="Select sort type" *ngIf="isCompleted">
         <ng-container *ngFor="let sort of sortData">
             <input type="radio" class="btn-check" name="btnradio" [id]="'btnradio_' + sort.id" autocomplete="off"
                 (change)="changeSort(sort.id)" [checked]="sort.id == sortType">
