--- a/src/app/patch-notes-generator/patch-notes-generator.component.html
+++ b/src/app/patch-notes-generator/patch-notes-generator.component.html
@@ -20,30 +20,60 @@
 </div>
 
 <ng-container *ngIf="isCompleted">
-  <div class="form-inline" *ngIf="getChangedCards.length || getAddedCards.length">
-    <div class="form-group">
-      <label for="resourceImageFolder">Resource Image Folder</label>
-      <button *ngIf="getChangedCards.length" type="button" class="btn btn-secondary ms-1"
-        (click)="copyResourceImages()">File Changed List</button>
-      <button *ngIf="getAddedCards.length" type="button" class="btn btn-secondary ms-1"
-        (click)="convertNewCards()">Convert New Cards</button>
+  <div class="row">
+    <div class="form-inline col-12 col-md-6" *ngIf="getChangedCards.length || getAddedCards.length">
+      <div class="form-group">
+        <label for="resourceImageFolder">File List</label>
+        <button *ngIf="getChangedCards.length" type="button" class="btn btn-info btn-sm ms-1"
+          (click)="generateChangedCardList()">Change</button>
+        <button *ngIf="getAddedCards.length" type="button" class="btn btn-info btn-sm ms-1"
+          (click)="generateNewCardList()">New</button>
+      </div>
+    </div>
+    <div class="form-inline col-12 col-md-6" *ngIf="getAddedCards.length">
+      <div class="form-group">
+        <label for="resourceImageFolder">Module Data</label>
+        <button *ngIf="getAddedCards.length" type="button" class="btn btn-info btn-sm ms-1"
+          (click)="convertNewCards()">New</button>
+      </div>
     </div>
   </div>
 
-  <div class="form-check form-check-inline" *ngFor="let modifyType of modifyTypes">
-    <input class="form-check-input" type="checkbox" [id]="modifyType.id + '-display'"
-      (change)="optionModifyChanged(modifyType.type)" [checked]="modifyType.value" [disabled]="!getCards(modifyType.type).length">
-    <label class="form-check-label" [for]="modifyType.id + '-display'">
-      {{modifyType.text}} cards
-      {{ getCards(modifyType.type).length ? '(' + getCards(modifyType.type).length + ')' : ''}}
-    </label>
+  <div class="w-100 mt-3">
+    Change Types
+    <div class="btn-group d-flex" role="group" aria-label="Choose a change type">
+      <ng-container *ngFor="let modifyType of modifyTypes">
+        <input class="btn-check" type="checkbox" [id]="modifyType.id + '-display'"
+          (change)="optionModifyChanged(modifyType.type)" [checked]="modifyType.value"
+          [disabled]="!getCards(modifyType.type).length">
+        <label class="btn btn-outline-primary border border-dark" [for]="modifyType.id + '-display'">
+          {{modifyType.text}}
+          <span class="badge bg-warning text-dark">{{ getCards(modifyType.type).length ?
+            getCards(modifyType.type).length
+            : ''}}</span>
+        </label>
+      </ng-container>
+    </div>
   </div>
 
-  <div class="mt-3">
-    <button type="button" class="btn btn-success me-3" (click)="optionDisplayChanged('display')">Display</button>
-    <button type="button" class="btn btn-success me-3" (click)="optionDisplayChanged('patchNote')">Patch Note</button>
-    <button type="button" class="btn btn-success me-3" (click)="optionDisplayChanged('newChangeLog')">Change
-      Log</button>
+  <div class="w-100 mt-3">
+    Display Method
+    <div class="btn-group d-flex" role="group" aria-label="Choose a display method">
+      <input type="radio" class="btn-check" id="displayType_display" autocomplete="off"
+        [checked]="displayType == 'display'" (click)="optionDisplayChanged('display')">
+      <label class="btn btn-outline-success" for="displayType_display">Display</label>
+      <input type="radio" class="btn-check" id="displayType_patchNote" autocomplete="off"
+        [checked]="displayType == 'patchNote'" (click)="optionDisplayChanged('patchNote')">
+      <label class="btn btn-outline-success" for="displayType_patchNote">Patch Note</label>
+      <input type="radio" class="btn-check" id="displayType_newChangeLog" autocomplete="off"
+        [checked]="displayType == 'newChangeLog'" (click)="optionDisplayChanged('newChangeLog')">
+      <label class="btn btn-outline-success" for="displayType_newChangeLog">Change
+        Log</label>
+    </div>
+  </div>
+
+  <div class="">
+
   </div>
 
   <table class="table mt-3" style="table-layout: fixed">
@@ -64,7 +94,8 @@
           <td colspan="3" class="subheader">{{ logGroup.type }}</td>
         </tr>
         <ng-container *ngFor="let log of logGroup.list">
-          <tr *ngIf="log.display" [ngClass]="{'removed-cards': log.type == MODIFY_TYPE.REMOVE, 'flavor-changed-cards': log.type == MODIFY_TYPE.CHANGE_FLAVOR }">
+          <tr *ngIf="log.display"
+            [ngClass]="{'removed-cards': log.type == MODIFY_TYPE.REMOVE, 'flavor-changed-cards': log.type == MODIFY_TYPE.CHANGE_FLAVOR }">
             <td>
               <img *ngIf="log.type != MODIFY_TYPE.ADD && PatchInfo[this.comparingPatch]"
                 [lazyLoad]="getAPIImage(log.data.code, PatchInfo[this.comparingPatch].code)" width="200px"
@@ -77,6 +108,7 @@
             </td>
             <td>
               <div *ngFor="let diff of log.diff" [innerHTML]="diff | safeHtml"></div>
+              <button type="button" (click)="copy2Clipboard(log.diff)">Copy</button>
             </td>
           </tr>
         </ng-container>
