--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,13 @@
+.navbar {
+    background-color: #e3f2fd;
+
+    .nav-item {
+        .nav-link.active {
+            font-weight: bold;
+        }
+    }
+}
+
 .container {
     position: relative;
 }
