--- a/src/app/database/database.component.html
+++ b/src/app/database/database.component.html
@@ -144,6 +144,12 @@
     </div>
 </form>
 
+<div class="text-center mt-3" *ngIf="!isCompleted">
+    <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
+    </div>
+</div>
+
 <div class="search-result" *ngIf="isCompleted">
     <div class="mt-3">Found {{searchResults.length}} card(s).</div>
 
@@ -302,6 +308,8 @@
     </div>
 
     <div class="back-to-top-wrapper">
-        <a href="database#top" class="back-to-top-link" aria-label="Scroll to Top">▲</a>
+        <a href="database#top" class="back-to-top-link" aria-label="Scroll to Top">
+            <i class="bi bi-chevron-double-up"></i>
+        </a>
     </div>
 </div>
