--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,7 @@
 <h1>LoR Generator {{latestVersion}}</h1>
 <p>A tool for tracking the card updates of each patch and save the editor's time.</p>
-<p>Author: Onfealive</p>
+<p>Author: Onfealive, <input type="email" class="form-control" value="vhtnghia@gmail.com" readonly></p>
+<p>Feedback Link: <a href="https://forms.gle/pXGsRk5BwBau7PbQ7">https://forms.gle/pXGsRk5BwBau7PbQ7</a></p>
 
 <h2>Change Log</h2>
 <div class="accordion mb-5" id="accordionChangeLog">
