--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,63 @@
 /* You can add global styles to this file, and also import other style files */
+// Learn about this technique:
+// @link https://moderncss.dev/pure-css-smooth-scroll-back-to-top/
+
+$color: #254568;
+$main-width: 50rem;
+// How far of a scroll travel within <main> prior to the
+// link appearing
+$scrollLength: 100vh;
+
+.back-to-top-wrapper {
+    // uncomment to visualize "track"
+    // outline: 1px solid red;
+    position: absolute;
+    top: $scrollLength;
+    right: -5em;
+    bottom: -5em;
+    width: 3em;
+    pointer-events: none;
+}
+
+.back-to-top-link {
+    // `fixed` is fallback
+    position: fixed;
+    // preferred positioning, requires prefixing for most support, and not supported on Safari
+    // @link https://caniuse.com/#search=position%3A%20sticky
+    position: sticky;
+    // reinstate clicks
+    pointer-events: all;
+    // achieves desired positioning within the viewport
+    // relative to the top of the viewport once `sticky` takes over, or always if `fixed` fallback is used
+    top: calc(100vh - 8rem);
+
+    // basic styling
+    display: inline-block;
+    text-decoration: none;
+    font-size: 2rem;
+    line-height: 1;
+    text-align: center;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    padding: 0.25rem;
+
+    // "pretty" styles, including states
+    border: 1px solid $color;
+    background-color: scale-color($color, $lightness: 85%);
+    transition: transform 80ms ease-in;
+
+    &:hover,
+    &:focus {
+        transform: scale(1.1);
+    }
+
+    &:focus {
+        outline: none;
+        box-shadow: 0 0 0 3px scale-color($color, $lightness: 35%);
+    }
+}
+
 .ng-select .ng-select-container {
     .ng-value-container {
         .ng-value-icon.left {
