--- a/src/app/expedition-generator/expedition-generator.component.html
+++ b/src/app/expedition-generator/expedition-generator.component.html
@@ -1,92 +1,94 @@
-<ng-container *ngFor="let eInfo of expeditionInfo">
-    <label class="expedition-label">
-        <input name="options" ng-control="options" type="radio" [value]="eInfo.code" [checked]="eInfo.checked"
-            (change)="changeExpeditionInfo(eInfo)">
-        {{ eInfo.name }}
-    </label>
-</ng-container>
+<div class="pb-4">
+    <ng-container *ngFor="let eInfo of expeditionInfo">
+        <label class="expedition-label">
+            <input name="options" ng-control="options" type="radio" [value]="eInfo.code" [checked]="eInfo.checked"
+                (change)="changeExpeditionInfo(eInfo)">
+            {{ eInfo.name }}
+        </label>
+    </ng-container>
 
-<div class="form-inline">
-    <div class="form-group">
-        <label>Options:</label>
-        <button type="button" class="btn btn-success btn-sm ms-1"
-            (click)="displayExpedition(selectedExpeditionInfo.name)"
-            [disabled]="!selectedExpeditionInfo.compareable">Display</button>
-        <button *ngIf="selectedExpeditionInfo.compareable" type="button" class="btn btn-success btn-sm ms-1"
-            (click)="compareExpedition(selectedExpeditionInfo.name)">Compare</button>
+    <div class="form-inline">
+        <div class="form-group">
+            <label>Options:</label>
+            <button type="button" class="btn btn-success btn-sm ms-1"
+                (click)="displayExpedition(selectedExpeditionInfo.name)"
+                [disabled]="!selectedExpeditionInfo.compareable">Display</button>
+            <button *ngIf="selectedExpeditionInfo.compareable" type="button" class="btn btn-success btn-sm ms-1"
+                (click)="compareExpedition(selectedExpeditionInfo.name)">Compare</button>
+        </div>
     </div>
-</div>
 
-<div class="expedition-container mt-3" *ngIf="!comparingData && expeditionDatabase[selectedExpeditionInfo.name]">
-    <nav id="expedition-scroll" class="expedition-scroll navbar navbar-light bg-light position-fixed">
-        <nav class="nav nav-pills flex-column">
-            <a *ngFor="let archetype of expeditionDatabase[selectedExpeditionInfo.name];let i = index" class="nav-link"
-                [href]="'#archetype_' + i" (click)="scrollToElement($event, '#archetype_' + i)">
-                {{archetype.name}}
-            </a>
+    <div class="expedition-container mt-3" *ngIf="!comparingData && expeditionDatabase[selectedExpeditionInfo.name]">
+        <nav id="expedition-scroll" class="expedition-scroll navbar navbar-light bg-light position-fixed">
+            <nav class="nav nav-pills flex-column">
+                <a *ngFor="let archetype of expeditionDatabase[selectedExpeditionInfo.name];let i = index"
+                    class="nav-link" [href]="'#archetype_' + i" (click)="scrollToElement($event, '#archetype_' + i)">
+                    {{archetype.name}}
+                </a>
+            </nav>
         </nav>
-    </nav>
 
-    <div class="expedition-scrollpsy">
-        <ng-container *ngFor="let archetype of expeditionDatabase[selectedExpeditionInfo.name]; let i = index ">
-            <h4 [id]="'archetype_' + i">{{archetype.name}}</h4>
-            <p>Regions: {{archetype.region}}</p>
-            <p>Offering Rate: {{archetype.offeringRate * 100}}%</p>
-            <p>Cohesiveness Rating: {{archetype.cohesiveness}}</p>
-            <p>Wild Pick Bonus Ratio: {{archetype.wildPickBonus}}</p>
-            <p>Cards:</p>
-            <div class="row" *ngIf="archetype.cards.champions">
-                <div class="col-8 offset-md-1">Champions</div>
-                <div class="col-8 offset-md-1">
-                    <ul class="row row-cols-1 row-cols-md-3">
-                        <li class="col" *ngFor="let card of archetype.cards.champions">{{card}}</li>
-                    </ul>
+        <div class="expedition-scrollpsy">
+            <ng-container *ngFor="let archetype of expeditionDatabase[selectedExpeditionInfo.name]; let i = index ">
+                <h4 [id]="'archetype_' + i">{{archetype.name}}</h4>
+                <p>Regions: {{archetype.region}}</p>
+                <p>Offering Rate: {{archetype.offeringRate * 100}}%</p>
+                <p>Cohesiveness Rating: {{archetype.cohesiveness}}</p>
+                <p>Wild Pick Bonus Ratio: {{archetype.wildPickBonus}}</p>
+                <p>Cards:</p>
+                <div class="row" *ngIf="archetype.cards.champions">
+                    <div class="col-8 offset-md-1">Champions</div>
+                    <div class="col-8 offset-md-1">
+                        <ul class="row row-cols-1 row-cols-md-3">
+                            <li class="col" *ngFor="let card of archetype.cards.champions">{{card}}</li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="row" *ngIf="archetype.cards.followers">
-                <div class="col-8 offset-md-1">Followers</div>
-                <div class="col-8 offset-md-1">
-                    <ul class="row row-cols-1 row-cols-md-3">
-                        <li class="col" *ngFor="let card of archetype.cards.followers">{{card}}</li>
-                    </ul>
+                <div class="row" *ngIf="archetype.cards.followers">
+                    <div class="col-8 offset-md-1">Followers</div>
+                    <div class="col-8 offset-md-1">
+                        <ul class="row row-cols-1 row-cols-md-3">
+                            <li class="col" *ngFor="let card of archetype.cards.followers">{{card}}</li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="row" *ngIf="archetype.cards.landmarks">
-                <div class="col-8 offset-md-1">Landmarks</div>
-                <div class="col-8 offset-md-1">
-                    <ul class="row row-cols-1 row-cols-md-3">
-                        <li class="col" *ngFor="let card of archetype.cards.landmarks">{{card}}</li>
-                    </ul>
+                <div class="row" *ngIf="archetype.cards.landmarks">
+                    <div class="col-8 offset-md-1">Landmarks</div>
+                    <div class="col-8 offset-md-1">
+                        <ul class="row row-cols-1 row-cols-md-3">
+                            <li class="col" *ngFor="let card of archetype.cards.landmarks">{{card}}</li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="row" *ngIf="archetype.cards.spells">
-                <div class="col-8 offset-md-1">Spells</div>
-                <div class="col-8 offset-md-1">
-                    <ul class="row row-cols-1 row-cols-md-3">
-                        <li class="col" *ngFor="let card of archetype.cards.spells">{{card}}</li>
-                    </ul>
+                <div class="row" *ngIf="archetype.cards.spells">
+                    <div class="col-8 offset-md-1">Spells</div>
+                    <div class="col-8 offset-md-1">
+                        <ul class="row row-cols-1 row-cols-md-3">
+                            <li class="col" *ngFor="let card of archetype.cards.spells">{{card}}</li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="row" *ngIf="archetype.cards.unknown">
-                <div class="col-8 offset-md-1">Unknown</div>
-                <div class="col-8 offset-md-1">
-                    <ul class="row row-cols-1 row-cols-md-3">
-                        <li class="col" *ngFor="let card of archetype.cards.unknown">{{card}}</li>
-                    </ul>
+                <div class="row" *ngIf="archetype.cards.unknown">
+                    <div class="col-8 offset-md-1">Unknown</div>
+                    <div class="col-8 offset-md-1">
+                        <ul class="row row-cols-1 row-cols-md-3">
+                            <li class="col" *ngFor="let card of archetype.cards.unknown">{{card}}</li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <p class="col-8 text-break">Deck Code: {{archetype.code}}</p>
-            </div>
+                <div class="row">
+                    <p class="col-8 text-break">Deck Code: {{archetype.code}}</p>
+                </div>
+            </ng-container>
+        </div>
+    </div>
+
+    <div class="comparing-expedtions" *ngIf="comparingData">
+        <ng-container *ngFor="let archetype of comparingData">
+            <h4>{{archetype.name}}</h4>
+            <ul>
+                <li *ngFor="let diff of archetype.diff">{{diff}}</li>
+            </ul>
         </ng-container>
     </div>
-</div>
-
-<div class="comparing-expedtions" *ngIf="comparingData">
-    <ng-container *ngFor="let archetype of comparingData">
-        <h4>{{archetype.name}}</h4>
-        <ul>
-            <li *ngFor="let diff of archetype.diff">{{diff}}</li>
-        </ul>
-    </ng-container>
 </div>
