--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@ $scrollLength: 100vh;
     // outline: 1px solid red;
     position: absolute;
     top: $scrollLength;
-    right: -5em;
+    right: 10px;
     bottom: -5em;
     width: 3em;
     pointer-events: none;
