--- a/src/app/unowned-cards/unowned-cards.component.html
+++ b/src/app/unowned-cards/unowned-cards.component.html
@@ -104,7 +104,8 @@
         </div>
         <div class="tab-pane fade" id="pills-deckcode" role="tabpanel" aria-labelledby="pills-deckcode-tab">
             <ul *ngFor="let regionData of details">
-                <img [src]="'/assets/icons/' + regionData.name + '.png'" width="30px"> {{ regionData.name }}
+                <img *ngIf="regionData.icon" [src]="'/assets/icons/' + regionData.icon + '.png'" width="30px"> {{
+                regionData.name }}
                 <li *ngFor="let deckCode of regionData.deckCode; let i = index">
                     <span class="me-1">{{ deckCode }}</span>(<img src="/assets/currency/Shard.png"
                         width="30px">{{regionData.shards[i]}})
