--- a/src/app/database/database.component.html
+++ b/src/app/database/database.component.html
@@ -8,7 +8,7 @@
                     [formControlName]="i">
                 <label class="form-check-label" [for]="'region' + regionsData[i].id">
                     <img *ngIf="regionsData[i].icon" [src]="'./assets/icons/' + regionsData[i].icon + '.png'">
-                    <span *ngIf="regionsData[i].name">{{regionsData[i].name }}</span>
+                    <!-- <span *ngIf="regionsData[i].name">{{regionsData[i].name }}</span> -->
                 </label>
             </div>
         </div>
