--- a/src/app/patch-notes-generator/patch-notes-generator.component.html
+++ b/src/app/patch-notes-generator/patch-notes-generator.component.html
@@ -1,119 +1,119 @@
 <div class="mb-3">
-  <div>Use the already data:</div>
-  <ng-container *ngFor="let pInfo of patchInfo; let i = index;">
-    <label class="patch-label">
-      <input [disabled]="i == 0" name="options" ng-control="options" type="radio" [value]="pInfo.code"
-        [checked]="pInfo.checked" (change)="selectPatchInfo(pInfo)">
-      {{ pInfo.name }}
-    </label>
-  </ng-container>
-  <button type="button" class="btn btn-success mb-2" (click)="compare()">Compare</button>
+    <div>Use the already data:</div>
+    <ng-container *ngFor="let pInfo of patchInfo; let i = index;">
+        <label class="patch-label">
+            <input [disabled]="i == 0" name="options" ng-control="options" type="radio" [value]="pInfo.code"
+                [checked]="pInfo.checked" (change)="selectPatchInfo(pInfo)">
+            {{ pInfo.name }}
+        </label>
+    </ng-container>
+    <button type="button" class="btn btn-success mb-2" (click)="compare()">Compare</button>
 
-  <div>Or use your data files:</div>
-  <ngx-dropzone (change)="onSelect($event)">
-    <ngx-dropzone-label>{{ title }}</ngx-dropzone-label>
-    <ngx-dropzone-preview *ngFor="let f of files">
-      <ngx-dropzone-label>{{ f.name }} ({{ f.type }})</ngx-dropzone-label>
-    </ngx-dropzone-preview>
-  </ngx-dropzone>
-  {{ error }}
+    <div>Or use your data files:</div>
+    <ngx-dropzone (change)="onSelect($event)">
+        <ngx-dropzone-label>{{ title }}</ngx-dropzone-label>
+        <ngx-dropzone-preview *ngFor="let f of files">
+            <ngx-dropzone-label>{{ f.name }} ({{ f.type }})</ngx-dropzone-label>
+        </ngx-dropzone-preview>
+    </ngx-dropzone>
+    {{ error }}
 </div>
 
 <ng-container *ngIf="isCompleted">
-  <div class="row">
-    <div class="form-inline col-12 col-md-6" *ngIf="getChangedCards.length || getAddedCards.length">
-      <div class="form-group">
-        <label for="resourceImageFolder">File List</label>
-        <button *ngIf="getChangedCards.length" type="button" class="btn btn-info btn-sm ms-1"
-          (click)="generateChangedCardList()">Change</button>
-        <button *ngIf="getAddedCards.length" type="button" class="btn btn-info btn-sm ms-1"
-          (click)="generateNewCardList()">New</button>
-      </div>
+    <div class="row">
+        <div class="form-inline col-12 col-md-6" *ngIf="getChangedCards.length || getAddedCards.length">
+            <div class="form-group">
+                <label for="resourceImageFolder">File List</label>
+                <button *ngIf="getChangedCards.length" type="button" class="btn btn-info btn-sm ms-1"
+                    (click)="generateChangedCardList()">Change</button>
+                <button *ngIf="getAddedCards.length" type="button" class="btn btn-info btn-sm ms-1"
+                    (click)="generateNewCardList()">New</button>
+            </div>
+        </div>
+        <div class="form-inline col-12 col-md-6" *ngIf="getAddedCards.length">
+            <div class="form-group">
+                <label for="resourceImageFolder">Module Data</label>
+                <button *ngIf="getAddedCards.length" type="button" class="btn btn-info btn-sm ms-1"
+                    (click)="convertNewCards()">New</button>
+            </div>
+        </div>
     </div>
-    <div class="form-inline col-12 col-md-6" *ngIf="getAddedCards.length">
-      <div class="form-group">
-        <label for="resourceImageFolder">Module Data</label>
-        <button *ngIf="getAddedCards.length" type="button" class="btn btn-info btn-sm ms-1"
-          (click)="convertNewCards()">New</button>
-      </div>
+
+    <div class="w-100 mt-3">
+        Change Types
+        <div class="btn-group d-flex" role="group" aria-label="Choose a change type">
+            <ng-container *ngFor="let modifyType of modifyTypes">
+                <input class="btn-check" type="checkbox" [id]="modifyType.id + '-display'"
+                    (change)="optionModifyChanged(modifyType.type)" [checked]="modifyType.value"
+                    [disabled]="!getCards(modifyType.type).length">
+                <label class="btn btn-outline-primary border border-dark" [for]="modifyType.id + '-display'">
+                    {{modifyType.text}}
+                    <span class="badge bg-warning text-dark">{{ getCards(modifyType.type).length ?
+                        getCards(modifyType.type).length
+                        : ''}}</span>
+                </label>
+            </ng-container>
+        </div>
     </div>
-  </div>
 
-  <div class="w-100 mt-3">
-    Change Types
-    <div class="btn-group d-flex" role="group" aria-label="Choose a change type">
-      <ng-container *ngFor="let modifyType of modifyTypes">
-        <input class="btn-check" type="checkbox" [id]="modifyType.id + '-display'"
-          (change)="optionModifyChanged(modifyType.type)" [checked]="modifyType.value"
-          [disabled]="!getCards(modifyType.type).length">
-        <label class="btn btn-outline-primary border border-dark" [for]="modifyType.id + '-display'">
-          {{modifyType.text}}
-          <span class="badge bg-warning text-dark">{{ getCards(modifyType.type).length ?
-            getCards(modifyType.type).length
-            : ''}}</span>
-        </label>
-      </ng-container>
+    <div class="w-100 mt-3">
+        Display Method
+        <div class="btn-group d-flex" role="group" aria-label="Choose a display method">
+            <input type="radio" class="btn-check" id="displayType_display" autocomplete="off"
+                [checked]="displayType == 'display'" (click)="optionDisplayChanged('display')">
+            <label class="btn btn-outline-success" for="displayType_display">Display</label>
+            <input type="radio" class="btn-check" id="displayType_patchNote" autocomplete="off"
+                [checked]="displayType == 'patchNote'" (click)="optionDisplayChanged('patchNote')">
+            <label class="btn btn-outline-success" for="displayType_patchNote">Patch Note</label>
+            <input type="radio" class="btn-check" id="displayType_changeLog" autocomplete="off"
+                [checked]="displayType == 'changeLog'" (click)="optionDisplayChanged('changeLog')">
+            <label class="btn btn-outline-success" for="displayType_changeLog">Change
+                Log</label>
+        </div>
     </div>
-  </div>
 
-  <div class="w-100 mt-3">
-    Display Method
-    <div class="btn-group d-flex" role="group" aria-label="Choose a display method">
-      <input type="radio" class="btn-check" id="displayType_display" autocomplete="off"
-        [checked]="displayType == 'display'" (click)="optionDisplayChanged('display')">
-      <label class="btn btn-outline-success" for="displayType_display">Display</label>
-      <input type="radio" class="btn-check" id="displayType_patchNote" autocomplete="off"
-        [checked]="displayType == 'patchNote'" (click)="optionDisplayChanged('patchNote')">
-      <label class="btn btn-outline-success" for="displayType_patchNote">Patch Note</label>
-      <input type="radio" class="btn-check" id="displayType_newChangeLog" autocomplete="off"
-        [checked]="displayType == 'newChangeLog'" (click)="optionDisplayChanged('newChangeLog')">
-      <label class="btn btn-outline-success" for="displayType_newChangeLog">Change
-        Log</label>
+    <div class="">
+
     </div>
-  </div>
 
-  <div class="">
-
-  </div>
-
-  <table class="table mt-3" style="table-layout: fixed">
-    <colgroup>
-      <col style="width: 20%;">
-      <col style="width: 20%;">
-      <col style="width: 60%;">
-    </colgroup>
-    <thead class="table-dark text-center">
-      <tr>
-        <th scope="col" colspan="2">Card</th>
-        <th scope="col">Differences</th>
-      </tr>
-    </thead>
-    <tbody>
-      <ng-container *ngFor="let logGroup of logs">
-        <tr>
-          <td colspan="3" class="subheader">{{ logGroup.type }}</td>
-        </tr>
-        <ng-container *ngFor="let log of logGroup.list">
-          <tr *ngIf="log.display"
-            [ngClass]="{'removed-cards': log.type == MODIFY_TYPE.REMOVE, 'flavor-changed-cards': log.type == MODIFY_TYPE.CHANGE_FLAVOR }">
-            <td>
-              <img *ngIf="log.type != MODIFY_TYPE.ADD && PatchInfo[this.comparingPatch]"
-                [lazyLoad]="getAPIImage(log.data.code, PatchInfo[this.comparingPatch].code)" width="200px"
-                [defaultImage]="defaultImage">
-            </td>
-            <td>
-              <img *ngIf="log.type != MODIFY_TYPE.REMOVE && PatchInfo[this.selectedPatch]"
-                [lazyLoad]="getAPIImage(log.data.code, PatchInfo[this.selectedPatch].code)" width="200px"
-                [defaultImage]="defaultImage">
-            </td>
-            <td>
-              <div *ngFor="let diff of log.diff" [innerHTML]="diff | safeHtml"></div>
-              <button *ngIf="displayType != 'display'" type="button" class="btn btn-warning btn-sm"
-                (click)="copy2Clipboard(log.diff)">Copy</button>
-            </td>
-          </tr>
-        </ng-container>
-      </ng-container>
-    </tbody>
-  </table>
+    <table class="table mt-3" style="table-layout: fixed">
+        <colgroup>
+            <col style="width: 20%;">
+            <col style="width: 20%;">
+            <col style="width: 60%;">
+        </colgroup>
+        <thead class="table-dark text-center">
+            <tr>
+                <th scope="col" colspan="2">Card</th>
+                <th scope="col">Differences</th>
+            </tr>
+        </thead>
+        <tbody>
+            <ng-container *ngFor="let logGroup of logs">
+                <tr>
+                    <td colspan="3" class="subheader">{{ logGroup.type }}</td>
+                </tr>
+                <ng-container *ngFor="let log of logGroup.list">
+                    <tr *ngIf="log.display"
+                        [ngClass]="{'removed-cards': log.type == MODIFY_TYPE.REMOVE, 'flavor-changed-cards': log.type == MODIFY_TYPE.CHANGE_FLAVOR }">
+                        <td>
+                            <img *ngIf="log.type != MODIFY_TYPE.ADD && PatchInfo[this.comparingPatch]"
+                                [lazyLoad]="getAPIImage(log.data.code, PatchInfo[this.comparingPatch].code)"
+                                width="200px" [defaultImage]="defaultImage">
+                        </td>
+                        <td>
+                            <img *ngIf="log.type != MODIFY_TYPE.REMOVE && PatchInfo[this.selectedPatch]"
+                                [lazyLoad]="getAPIImage(log.data.code, PatchInfo[this.selectedPatch].code)"
+                                width="200px" [defaultImage]="defaultImage">
+                        </td>
+                        <td>
+                            <div *ngFor="let diff of log.diff" [innerHTML]="diff | safeHtml"></div>
+                            <button *ngIf="displayType != 'display'" type="button" class="btn btn-warning btn-sm"
+                                (click)="copy2Clipboard(log.diff)">Copy</button>
+                        </td>
+                    </tr>
+                </ng-container>
+            </ng-container>
+        </tbody>
+    </table>
 </ng-container>
