--- a/src/app/unowned-cards/unowned-cards.component.html
+++ b/src/app/unowned-cards/unowned-cards.component.html
@@ -115,7 +115,7 @@
     </div>
 
     <div class="back-to-top-wrapper">
-        <a href="database#top" class="back-to-top-link" aria-label="Scroll to Top">
+        <a href="unowned-cards#top" class="back-to-top-link" aria-label="Scroll to Top">
             <i class="bi bi-chevron-double-up"></i>
         </a>
     </div>
