--- a/src/app/database/database.component.html
+++ b/src/app/database/database.component.html
@@ -15,28 +15,17 @@
     </div>
     <div class="form-group row">
         <label class="col-3 col-md-1 col-form-label">Sets</label>
-        <div class="col-9 col-md-5 image-checkboxes-container">
+        <div class="col-9 col-md-11 image-checkboxes-container">
             <div class="form-check form-check-inline" formArrayName="sets"
                 *ngFor="let region of setFormArray.controls; let i = index">
                 <input class="form-check-input" type="checkbox" [id]="'set' + setsData[i].id" [formControlName]="i">
-                <label class="form-check-label" [for]="'set' + setsData[i].id">
+                <label class="form-check-label" [for]="'set' + setsData[i].id"
+                    [ngClass]="{'form-check-label-no-icon': !setsData[i].icon}">
                     <img *ngIf="setsData[i].icon" [src]="'./assets/icons/' + setsData[i].icon + '.png'">
                     <span *ngIf="setsData[i].name">{{setsData[i].name }}</span>
                 </label>
             </div>
         </div>
-        <ng-container *ngIf="!isMobile">
-            <label class="col-md-1 col-form-label">Artist</label>
-            <div class="col-md-5">
-                <ng-select #artistSelector [(ngModel)]="selectedArtists" [ngModelOptions]="{standalone: true}"
-                    [multiple]="true" [maxSelectedItems]="1" [markFirst]="true"
-                    [placeholder]="'Artist like SIXMOREVODKA, Dao Le'">
-                    <ng-option *ngFor="let artist of artist" [value]="artist.name">
-                        {{artist.name}}
-                    </ng-option>
-                </ng-select>
-            </div>
-        </ng-container>
     </div>
     <div class="form-group row">
         <label class="col-3 col-md-1 col-form-label">Card Types</label>
@@ -45,7 +34,8 @@
                 <div class="form-check form-check-inline" formArrayName="cardTypes">
                     <input class="form-check-input" type="checkbox" [id]="'cardType' + cardType.id"
                         [formControlName]="cardType.index">
-                    <label class="form-check-label" [for]="'cardType' + cardType.id">
+                    <label class="form-check-label" [for]="'cardType' + cardType.id"
+                        [ngClass]="{'form-check-label-no-icon': !cardType.icon}">
                         <img *ngIf="cardType.icon" [src]="'./assets/icons/' + cardType.icon + '.png'">
                         <span *ngIf="cardType.name">{{cardType.name }}</span>
                     </label>
@@ -154,6 +144,19 @@
                         <span *ngIf="rarityData[i].name">{{rarityData[i].name }}</span>
                     </label>
                 </div>
+            </div>
+        </div>
+
+        <div class="form-group row mb-2">
+            <label class="col-3 col-md-1 col-form-label">Artist</label>
+            <div class="col-9 col-md-11">
+                <ng-select #artistSelector [(ngModel)]="selectedArtists" [ngModelOptions]="{standalone: true}"
+                    [multiple]="true" [maxSelectedItems]="1" [markFirst]="true"
+                    [placeholder]="'Artist like SIXMOREVODKA, Dao Le'">
+                    <ng-option *ngFor="let artist of artist" [value]="artist.name">
+                        {{artist.name}}
+                    </ng-option>
+                </ng-select>
             </div>
         </div>
     </div>
